[package]
name = "minesweeper"
version = "0.1.0"
edition = "2024"

[lib]
name = "minesweeper"
path = "src/lib.rs"

[[bin]]
name = "minesweeper"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.29.0"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.26.1"
